<resources>

    <!--Title-->
    <string name="title_detail">裝置資訊</string>
    <string name="title_privacy">隱私選擇設定</string>
    <string name="title_setting">設定</string>

    <!--Home-->
    <string name="app_name">IOTClient</string>
    <string name="nav_device">Device</string>
    <string name="nav_record">Record</string>
    <string name="nav_setting">Setting</string>

    <!--Bind-->
    <string name="bind_title">新增且綁定裝置</string>
    <string name="bind_input_placeholder">請輸入裝置的UDN</string>
    <string name="bind_button_qrcode">QRcode</string>
    <string name="bind_button_correct">新增</string>
    <string name="bind_button_cancel">返回</string>
    <string name="bind_qrcode_error">格式錯誤</string>

    <!--Detail-->
    <string name="detail_preference_setting">隱私選項設定</string>
    <string name="detail_detect_report">檢測報告下載</string>
    <string name="detail_report_download">下載中...</string>

    <!--Privacy-->
    <string name="privacy_report_title">隱私政策報告</string>
    <string name="privacy_version">版本</string>
    <string name="privacy_request">我們會依照下列政策收集相關資料</string>
    <string name="privacy_title">隱私政策</string>
    <string name="privacy_content">拒絕/同意</string>
    <string name="privacy_loading_title">隱私選擇儲存中</string>
    <string name="privacy_loading_message">請稍後...</string>
    <string name="privacy_loading_error">儲存失敗，請重新嘗試</string>

    <!--Record-->
    <string name="record_title">隱私選擇記錄</string>
    <string name="record_view">檢視</string>
    <string name="record_accept">同意</string>
    <string name="record_reject">拒絕</string>


    <!--Login-->
    <string name="action_sign_in">登入</string>
    <string name="login_iot_gateway">Login to IOT gateway</string>
    <string name="prompt_gateway">Gateway address</string>
    <string name="prompt_account">Account</string>
    <string name="prompt_password">Password</string>
    <string name="error_invalid_gateway">This gateway format is not available</string>
    <string name="error_invalid_account">This account is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>

    <!--Common-->
    <string name="dialog">dialog</string>
    <string name="no_content">查無資料</string>

</resources>
