<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/nav_device" />

    <item
        android:id="@+id/navigation_privacy"
        android:icon="@drawable/ic_lock_outline_black_24dp"
        android:title="@string/nav_record" />

    <item
        android:id="@+id/navigation_setting"
        android:icon="@drawable/ic_settings_black_24dp"
        android:title="@string/nav_setting" />

</menu>
