...
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".component.home.device.DeviceFragment">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/device_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:paddingTop="@dimen/padding"
            android:layout_marginRight="@dimen/margin_sm"
            android:layout_marginLeft="@dimen/margin_sm"
...
            android:layout_gravity="center"
            android:secondaryProgress="40"
            android:theme="@style/ProgressTheme"
            android:visibility="@{viewModel.isLoading ? View.VISIBLE : View.GONE}" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="@dimen/margin"
            android:src="@drawable/ic_add_black_24dp"
            app:backgroundTint="@color/colorPrimary" />
...
